# Ray-Tracing

./: CMakeLists.txt  RayTracing.cpp  a.out
1. 2D/: File.h  a.out  input.ppm  practice.cpp  vectorMath.cpp  vectorMath.h
1. 2D (basic tracing)/: File.cpp  README.md  RayTracing.cpp  input.txt
2. 3D (ambient, diffuse, specular, shadows)/: File.cpp  File.hpp  Makefile  README.md  RayTracing.cpp  final.ppm  final.txt  practice.cpp  vectorMath.cpp  vectorMath.hpp
2. 3D (ambient, diffuse, specular, shadows)/README/: README.md
2. 3D (ambient, diffuse, specular, shadows)/example/: NValue.txt  SpecularColor.txt  ambient.txt  attenuation.txt  attenuation_spotlight.txt  bluelight.txt  diffuse.txt  directional.txt  greenlight.txt  (+8 more)
3. Triangles (Texture Mapping, Parallel Projection)/: File.cpp  File.hpp  Makefile  RayTracing.cpp  Shading.cpp  Shading.hpp  Texture.cpp  Texture.hpp  a.out  cube.ppm  cube.txt  cube_texture.ppm  cube_texture.txt  hard_cylinder.ppm  hard_cylinder.txt  input.txt  kangx637  original_parallel.txt  parallel120.ppm  parallel120.txt  parallel90.txt  parellel120.ppm  practice.cpp  simple.txt  soft_cylinder.ppm  soft_cylinder.txt  sphere_texture.ppm  sphere_texture.txt  texture.ppm  texture.txt  vectorMath.cpp  vectorMath.hpp
4. Refraction and Reflection/: File.cpp  File.hpp  Makefile  RayTracing.cpp  Shading.cpp  Shading.hpp  SpecialTexture.cpp  SpecialTexture.hpp  VectorMath.cpp  VectorMath.hpp  a.out  input.ppm  input.txt  kangx637  practice.cpp  t_house.txt  t_smooth.ppm  testcase1.ppm  testcase1.txt  testcase2.txt  testcase3.ppm  testcase3.txt
(+2 files in other folders)
