# Dongha Kang
# September 11th, 2019
# CSCI 5607, University of Minnesota

cmake_minimum_required(VERSION 3.15.3)

# set(CMAKE_BUILD_TYPE Debug)
# set(CMAKE_CXX_FLAGS "-std=c++14")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-std=c++14")

# project(sample)

# add_executable(
#  sample
#  main.cpp
#  source1.cpp
# )


# cmake .   --> that will create files that makes Makefile. then run ...
